@@ -1536,6 +1536,7 @@ CREATE TABLE `gibboni18n` (  `gibboni18nID` int(4) unsigned zerofill NOT NULL AU
 INSERT INTO `gibboni18n` (`gibboni18nID`, `code`, `name`, `systemDefault`, `maintainerName`, `maintainerWebsite`, `dateFormat`, `currencyCode`, `currencySymbol`) VALUES(0001, 'en-GB', 'English - United Kingdom', 'Y', 'Gibbon', 'http://gibbonedu.org', 'd-m-Y', 'GBP', '£'),(0002, 'en-US', 'English - United States', 'N', 'Gibbon', 'http://gibbonedu.org', 'm-d-Y', 'USD', '$'),(0003, 'es', 'Español', 'N', 'International College Hong Kong (ICHK)', 'http://www.ichk.edu.hk', 'd-m-Y', 'EUR', '€'),(0004, 'zh-CN', '汉语 - 中国', 'N', 'International College Hong Kong (ICHK)', 'http://www.ichk.edu.hk', 'Y-m-d', 'CNY', '¥');end
 INSERT INTO `gibbonAction` (`gibbonActionID`, `gibbonModuleID`, `name`, `precedence`, `category`, `description`, `URLList`, `entryURL`, `entrySidebar`, `defaultPermissionAdmin`, `defaultPermissionTeacher`, `defaultPermissionStudent`, `defaultPermissionParent`, `defaultPermissionSupport`, `categoryPermissionStaff`, `categoryPermissionStudent`, `categoryPermissionParent`, `categoryPermissionOther`) VALUES (NULL, (SELECT gibbonModuleID FROM gibbonModule WHERE name='System Admin'), 'Language Settings', 0, '', 'Allows administrators to control system-wide language and localisation settings.', 'i18n_manage.php', 'i18n_manage.php', 'Y', 'Y', 'N', 'N', 'N', 'N', 'Y', 'N', 'N', 'N');end
 INSERT INTO `gibbonPermission` (`permissionID` ,`gibbonRoleID` ,`gibbonActionID`) VALUES (NULL , '1', (SELECT gibbonActionID FROM gibbonAction JOIN gibbonModule ON (gibbonAction.gibbonModuleID=gibbonModule.gibbonModuleID) WHERE gibbonModule.name='System Admin' AND gibbonAction.name='Language Settings'));end
+ALTER TABLE `gibbonPerson` ADD `gibboni18nIDPersonal` INT( 4 ) UNSIGNED ZEROFILL NULL DEFAULT NULL ;end
 
 --LAST ICHK
 --LAST HLY
